fix: "Navegación Siempre visible"

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,6 +6,7 @@ header {
     background-color: $sobrePuestos;
     top: 0;
     position: sticky;
+    z-index: 100;
     @include box-shadow;
 
     #navegacionPrincipal {
